# zzub

./: .pre-commit-config.yaml  README.md
client/: .gitignore  nginx.conf  package-lock.json  package.json  rollup.config.js  tsconfig.json  watch.fish
client/src/: App.svelte  CharacterSelectionMenu.svelte  ColourSelectionMenu.svelte  Game.svelte  PlayerNameSelectionMenu.svelte  ReadyMenu.svelte  global.scss  main.ts  utils.ts
client/static/: index.html
docker/: client.dockerfile  docker-compose.py  server.dockerfile
game/: .gitignore  Makefile  export_presets.cfg  font.tres  format.fish  global.gd  icon.png.import  project.godot  run.sh  scene_changer.gd  scene_changer.tscn  theme.tres  watch.sh  websocket_client.gd
game/character_selection_menu/: character_selection_menu.gd  character_selection_menu.tscn  player.gd  player.tscn
game/game/: answer.gd  answer.tscn  character.gd  character.tscn  game.gd  game.tscn  player_score.gd  player_score.tscn
resources/: .gitignore
scripts/: build-resources.fish  deploy-compute.fish  nginx.conf  nginx.conf.template  run-locally.fish
server/: .gitignore  README.md  pyproject.toml  run.sh  setup.cfg
server/jackbox_test_server/: __init__.py  data.py  trivia.py  utils.py
server/jackbox_test_server/dataclasses/: dataclasses.py  player.py
server/tests/: test_jackbox_test_server.py  test_zzub_server.py
server/zzub_server/: __init__.py  characters.py  colours.py  data.py  players.py  trivia.py
server/zzub_server/dataclasses/: player.py
terraform/: .gitignore  compute.tf  firewall.tf  main.tf  variables.tf
(+6 files in other folders)
